# clef

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: clef.yml
examples/: npm-usage.md
migrations/2025-07-18-165003_create_packages/: down.sql  up.sql
migrations/2025-07-18-165757_create_users/: down.sql  up.sql
migrations/2025-07-18-170740_add_publishing_to_packages/: down.sql  up.sql
migrations/2025-07-18-172259_remove_is_published_field/: down.sql  up.sql
migrations/2025-07-19-000000_normalize_package_schema/: down.sql  up.sql
migrations/2025-07-19-150400_remove_package_json_field/: down.sql  up.sql
migrations/2025-07-19-215840_create_users_and_tokens/: down.sql  up.sql
migrations/2025-07-19-215908_create_packages/: down.sql  up.sql
migrations/2025-07-19-215935_create_package_versions/: down.sql  up.sql
migrations/2025-07-19-220002_create_package_files/: down.sql  up.sql
migrations/2025-07-19-220030_create_package_owners/: down.sql  up.sql
migrations/2025-07-20-160730_create_cache_stats/: down.sql  up.sql
migrations/2025-07-20-212619_create_metadata_cache/: down.sql  up.sql
migrations/2025-07-22-141049_create_organizations/: down.sql  up.sql
migrations/2025-07-22-141141_add_organization_to_packages/: down.sql  up.sql
migrations/2025-07-22-164628_create_package_tags/: down.sql  up.sql
migrations/2025-07-23-104459_add_readme_to_package_versions/: down.sql  up.sql
scripts/: benchmark.sh  compare-performance.sh  install.sh  pnrs.service  run-e2e-tests.sh
src/: config.rs  error.rs  fairings.rs  lib.rs  main.rs  schema.rs  state.rs
src/database/: analytics.rs  cache_stats.rs  connection.rs  files.rs  metadata_cache.rs  (+7 more)
tests/: E2E_TESTS_SUMMARY.md  e2e_tests.rs  integration_tests.rs
(+79 files in other folders)
