[package]
name = "pnrs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.12", features = ["sqlite", "chrono", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"

[dev-dependencies]
rocket = "0.5.1"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
chrono = { version = "0.4.41", features = ["serde"] }
